# coding-practice-rust

./: Cargo.toml  generate_bins.py
src/: main.rs
