[package]
name = "coding-practice-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
proconio = "0.4.5"

[[bin]]
name = "src_bin_abc170_a"
path = "src/bin/abc170_a.rs"

[[bin]]
name = "src_bin_abc168_c"
path = "src/bin/abc168_c.rs"

[[bin]]
name = "src_bin_abc184_a"
path = "src/bin/abc184_a.rs"

[[bin]]
name = "src_bin_abc168_b"
path = "src/bin/abc168_b.rs"

[[bin]]
name = "src_bin_abc183_a"
path = "src/bin/abc183_a.rs"

[[bin]]
name = "src_bin_abc176_a"
path = "src/bin/abc176_a.rs"

[[bin]]
name = "src_bin_abc177_a"
path = "src/bin/abc177_a.rs"

[[bin]]
name = "src_bin_abc182_a"
path = "src/bin/abc182_a.rs"

[[bin]]
name = "src_bin_abc178_a"
path = "src/bin/abc178_a.rs"

[[bin]]
name = "src_bin_abc174_a"
path = "src/bin/abc174_a.rs"

[[bin]]
name = "src_bin_abc183_b"
path = "src/bin/abc183_b.rs"

[[bin]]
name = "src_bin_abc180_a"
path = "src/bin/abc180_a.rs"

[[bin]]
name = "src_bin_abc_181_a"
path = "src/bin/abc_181_a.rs"

[[bin]]
name = "src_bin_abc172_a"
path = "src/bin/abc172_a.rs"

[[bin]]
name = "src_bin_abc186_a"
path = "src/bin/abc186_a.rs"

[[bin]]
name = "src_bin_abc170_b"
path = "src/bin/abc170_b.rs"

[[bin]]
name = "src_bin_atcoder_abc152_a"
path = "src/bin/atcoder/abc152/a.rs"

[[bin]]
name = "src_bin_atcoder_abc164_a"
path = "src/bin/atcoder/abc164/a.rs"

[[bin]]
name = "src_bin_atcoder_abc163_a"
path = "src/bin/atcoder/abc163/a.rs"

[[bin]]
name = "src_bin_atcoder_abc137_a"
path = "src/bin/atcoder/abc137/a.rs"

[[bin]]
name = "src_bin_atcoder_abc165_a"
path = "src/bin/atcoder/abc165/a.rs"

[[bin]]
name = "src_bin_atcoder_abc153_a"
path = "src/bin/atcoder/abc153/a.rs"

[[bin]]
name = "src_bin_atcoder_abc086_a"
path = "src/bin/atcoder/abc086/a.rs"

[[bin]]
name = "src_bin_atcoder_abc185_a"
path = "src/bin/atcoder/abc185/a.rs"

[[bin]]
name = "src_bin_atcoder_abc169_a"
path = "src/bin/atcoder/abc169/a.rs"

[[bin]]
name = "src_bin_atcoder_abc161_a"
path = "src/bin/atcoder/abc161/a.rs"

[[bin]]
name = "src_bin_atcoder_abc168_a"
path = "src/bin/atcoder/abc168/a.rs"

[[bin]]
name = "src_bin_atcoder_abc127_a"
path = "src/bin/atcoder/abc127/a.rs"

[[bin]]
name = "src_bin_atcoder_abc118_a"
path = "src/bin/atcoder/abc118/a.rs"
