[package]
name = "coding-practice-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
proconio = "0.4.5"

[[bin]]
name = "src_bin_atcoder_abc152_a"
path = "src/bin/atcoder/abc152/a.rs"

[[bin]]
name = "src_bin_atcoder_abc164_a"
path = "src/bin/atcoder/abc164/a.rs"

[[bin]]
name = "src_bin_atcoder_abc163_a"
path = "src/bin/atcoder/abc163/a.rs"

[[bin]]
name = "src_bin_atcoder_abc137_a"
path = "src/bin/atcoder/abc137/a.rs"

[[bin]]
name = "src_bin_atcoder_abc162_a"
path = "src/bin/atcoder/abc162/a.rs"

[[bin]]
name = "src_bin_atcoder_abc162_b"
path = "src/bin/atcoder/abc162/b.rs"

[[bin]]
name = "src_bin_atcoder_abc165_a"
path = "src/bin/atcoder/abc165/a.rs"

[[bin]]
name = "src_bin_atcoder_abc153_a"
path = "src/bin/atcoder/abc153/a.rs"

[[bin]]
name = "src_bin_atcoder_abc088_a"
path = "src/bin/atcoder/abc088/a.rs"

[[bin]]
name = "src_bin_atcoder_abc086_a"
path = "src/bin/atcoder/abc086/a.rs"

[[bin]]
name = "src_bin_atcoder_abc214_a"
path = "src/bin/atcoder/abc214/a.rs"

[[bin]]
name = "src_bin_atcoder_abc087_a"
path = "src/bin/atcoder/abc087/a.rs"

[[bin]]
name = "src_bin_atcoder_abc206_a"
path = "src/bin/atcoder/abc206/a.rs"

[[bin]]
name = "src_bin_atcoder_abc206_b"
path = "src/bin/atcoder/abc206/b.rs"

[[bin]]
name = "src_bin_atcoder_abc125_a"
path = "src/bin/atcoder/abc125/a.rs"

[[bin]]
name = "src_bin_atcoder_abc182_a"
path = "src/bin/atcoder/abc182/a.rs"

[[bin]]
name = "src_bin_atcoder_abc176_a"
path = "src/bin/atcoder/abc176/a.rs"

[[bin]]
name = "src_bin_atcoder_abc176_b"
path = "src/bin/atcoder/abc176/b.rs"

[[bin]]
name = "src_bin_atcoder_abc176_c"
path = "src/bin/atcoder/abc176/c.rs"

[[bin]]
name = "src_bin_atcoder_abc171_a"
path = "src/bin/atcoder/abc171/a.rs"

[[bin]]
name = "src_bin_atcoder_abc171_b"
path = "src/bin/atcoder/abc171/b.rs"

[[bin]]
name = "src_bin_atcoder_abc185_a"
path = "src/bin/atcoder/abc185/a.rs"

[[bin]]
name = "src_bin_atcoder_abc178_a"
path = "src/bin/atcoder/abc178/a.rs"

[[bin]]
name = "src_bin_atcoder_abc179_a"
path = "src/bin/atcoder/abc179/a.rs"

[[bin]]
name = "src_bin_atcoder_typical90_033"
path = "src/bin/atcoder/typical90/033.rs"

[[bin]]
name = "src_bin_atcoder_abc184_a"
path = "src/bin/atcoder/abc184/a.rs"

[[bin]]
name = "src_bin_atcoder_abc184_b"
path = "src/bin/atcoder/abc184/b.rs"

[[bin]]
name = "src_bin_atcoder_abc170_a"
path = "src/bin/atcoder/abc170/a.rs"

[[bin]]
name = "src_bin_atcoder_abc170_b"
path = "src/bin/atcoder/abc170/b.rs"

[[bin]]
name = "src_bin_atcoder_abc177_a"
path = "src/bin/atcoder/abc177/a.rs"

[[bin]]
name = "src_bin_atcoder_abc183_a"
path = "src/bin/atcoder/abc183/a.rs"

[[bin]]
name = "src_bin_atcoder_abc183_b"
path = "src/bin/atcoder/abc183/b.rs"

[[bin]]
name = "src_bin_atcoder_abc169_a"
path = "src/bin/atcoder/abc169/a.rs"

[[bin]]
name = "src_bin_atcoder_abc160_a"
path = "src/bin/atcoder/abc160/a.rs"

[[bin]]
name = "src_bin_atcoder_abc166_a"
path = "src/bin/atcoder/abc166/a.rs"

[[bin]]
name = "src_bin_atcoder_abc192_a"
path = "src/bin/atcoder/abc192/a.rs"

[[bin]]
name = "src_bin_atcoder_abc192_b"
path = "src/bin/atcoder/abc192/b.rs"

[[bin]]
name = "src_bin_atcoder_abc161_a"
path = "src/bin/atcoder/abc161/a.rs"

[[bin]]
name = "src_bin_atcoder_abc157_a"
path = "src/bin/atcoder/abc157/a.rs"

[[bin]]
name = "src_bin_atcoder_abc168_a"
path = "src/bin/atcoder/abc168/a.rs"

[[bin]]
name = "src_bin_atcoder_abc168_b"
path = "src/bin/atcoder/abc168/b.rs"

[[bin]]
name = "src_bin_atcoder_abc168_c"
path = "src/bin/atcoder/abc168/c.rs"

[[bin]]
name = "src_bin_atcoder_abc085_a"
path = "src/bin/atcoder/abc085/a.rs"

[[bin]]
name = "src_bin_atcoder_abc085_b"
path = "src/bin/atcoder/abc085/b.rs"

[[bin]]
name = "src_bin_atcoder_abc085_c"
path = "src/bin/atcoder/abc085/c.rs"

[[bin]]
name = "src_bin_atcoder_abc083_a"
path = "src/bin/atcoder/abc083/a.rs"

[[bin]]
name = "src_bin_atcoder_abc083_b"
path = "src/bin/atcoder/abc083/b.rs"

[[bin]]
name = "src_bin_atcoder_abc064_a"
path = "src/bin/atcoder/abc064/a.rs"

[[bin]]
name = "src_bin_atcoder_abc172_a"
path = "src/bin/atcoder/abc172/a.rs"

[[bin]]
name = "src_bin_atcoder_abc186_a"
path = "src/bin/atcoder/abc186/a.rs"

[[bin]]
name = "src_bin_atcoder_abc181_a"
path = "src/bin/atcoder/abc181/a.rs"

[[bin]]
name = "src_bin_atcoder_abc181_b"
path = "src/bin/atcoder/abc181/b.rs"

[[bin]]
name = "src_bin_atcoder_abc175_a"
path = "src/bin/atcoder/abc175/a.rs"

[[bin]]
name = "src_bin_atcoder_abc175_b"
path = "src/bin/atcoder/abc175/b.rs"

[[bin]]
name = "src_bin_atcoder_abc128_a"
path = "src/bin/atcoder/abc128/a.rs"

[[bin]]
name = "src_bin_atcoder_abc174_a"
path = "src/bin/atcoder/abc174/a.rs"

[[bin]]
name = "src_bin_atcoder_abc174_b"
path = "src/bin/atcoder/abc174/b.rs"

[[bin]]
name = "src_bin_atcoder_abc180_a"
path = "src/bin/atcoder/abc180/a.rs"

[[bin]]
name = "src_bin_atcoder_abc180_b"
path = "src/bin/atcoder/abc180/b.rs"

[[bin]]
name = "src_bin_atcoder_abc173_a"
path = "src/bin/atcoder/abc173/a.rs"

[[bin]]
name = "src_bin_atcoder_abc127_a"
path = "src/bin/atcoder/abc127/a.rs"

[[bin]]
name = "src_bin_atcoder_abc118_a"
path = "src/bin/atcoder/abc118/a.rs"
